--- a/source/public/header.html
+++ b/source/public/header.html
@@ -3,15 +3,15 @@
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Dalton Polhill, Software Engineer, Technical Leader, Resume, Developer">
     <meta name="author" content="">
 
-    <title>Dalton Polhill</title>
+    <title>Dalton Polhill - Software Engineer</title>
 
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+    <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark primary-color">
 
         <a class="navbar-brand" href="#"><b>Dalton Polhill</b></a>
 
@@ -26,10 +26,15 @@
 
             <ul class="navbar-nav mr-auto ml-auto" style="text-align: center">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#profileSection">Profile</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="aboutMe.html">About Me</a>
+                    <a class="nav-link" href="#educationSection">Profile</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#experienceSection">Profile</a>
                 </li>
 
                 <li class="nav-item dropdown tulip-dropdown">
