working on the experience section

--- a/source/public/header.html
+++ b/source/public/header.html
@@ -30,11 +30,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#educationSection">Profile</a>
+                    <a class="nav-link" href="#educationSection">Education</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#experienceSection">Profile</a>
+                    <a class="nav-link" href="#experienceSection">Experience</a>
                 </li>
 
                 <li class="nav-item dropdown tulip-dropdown">
@@ -82,10 +82,6 @@
                         <a class="dropdown-item" href="adknown_goals.html">Work Term Goals</a>
                         <a class="dropdown-item" href="adknown_conclusion.html">Conclusion</a>
                     </div>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Acknowledgments</a>
                 </li>
             </ul>
 
