--- a/source/public/header.html
+++ b/source/public/header.html
@@ -103,7 +103,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com/daltonpolhill/" target="_blank">
+                    <a class="nav-link" href="https://www.linkedin.com/in/dalton-polhill/" target="_blank">
                         <i class="fab fa-instagram"></i> Instagram
                     </a>
                 </li>
